--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Cuadrícula de Colores RGB</title>
-<link rel="stylesheet" href="css/pruebas.css">
+<title>Modificador de Colores RGB</title>
+<link rel="stylesheet" href="/css/pruebas.css">
 </head>
 <body>
 <div id="colorGrid"></div>
-<div id="selectedColor">Color seleccionado: </div>
-<script src="js/pruebas.js"></script>
+<div id="texto">Texto de ejemplo</div>
+<script src="/js/pruebas.js"></script>
 </body>
 </html>
