--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Modificador de Colores RGB</title>
-<link rel="stylesheet" href="/css/pruebas.css">
+<link rel="stylesheet" href="css/pruebas.css">
 </head>
 <body>
 <div id="colorGrid"></div>
 <div id="texto">Texto de ejemplo</div>
-<script src="/js/pruebas.js"></script>
+<script src="js/pruebas.js"></script>
 </body>
 </html>
