--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Modificador de Colores RGB</title>
+<title>Cuadrícula de Colores RGB</title>
 <link rel="stylesheet" href="css/pruebas.css">
 </head>
 <body>
 <div id="colorGrid"></div>
-<div id="texto">Texto de ejemplo</div>
-<script src="js/pruebas.js"></script>
+<div id="texto">Color seleccionado: </div>
+<script src="/js/pruebas.js"></script>
 </body>
 </html>
